# igw

./: CMakeLists.txt  vcpkg.json
src/: main.cpp
src/core/: data_manager.cpp  data_manager.h  reader_registry.h  variable_reader.h
src/modbus_protocol/: modbus_reader.cpp  modbus_reader.h  modbus_storage.h  modbus_types.h
